--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Euro Bae"
   avatar           : "/assets/images/profile9.jpeg"
-  bio              : "I am a PhD student at KAIST College of Business."
+  bio              : "I am a third-year PhD student at KAIST College of Business."
   location         : "Seoul, Korea"
   email            :
   links:
