--- a/_config.yml
+++ b/_config.yml
@@ -290,6 +290,13 @@ defaults:
       related: true
 
 
+# Collections
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
+# Portfolio Collection
 defaults:
   # _portfolio
   - scope:
