--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ social:
 analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : "G-3RVBN7835W"
+    tracking_id          : "G-9MZBFPXSZS"
     anonymize_ip         : # true, false (default)
 
 
