--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Euro Bae"
   avatar           : "/assets/images/profile9.jpeg"
-  bio              : "Ph.D. Student"
+  bio              : "Ph.D. Student in Information Systems"
   location         : "Seoul, Korea"
   email            :
   links:
