--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "Euro Bae"
-  avatar           : "/assets/images/profile9.jpeg"
+  avatar           : "/assets/images/profile10.jpeg"
   bio              : "Ph.D. Candidate in Information Systems"
   location         : "Seoul, Korea"
   email            :
