--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Euro Bae"
   avatar           : "/assets/images/profile10_sq.png"
-  bio              : "Ph.D. Candidate in Information Systems"
+  bio              : "Ph.D. Candidate at KAIST"
   location         : "Seoul, Korea"
   email            :
   links:
