--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "Euro Bae"
-  avatar           : "/assets/images/profile10_sq.png"
+  avatar           : "/assets/images/profile11.jpg"
   bio              : "Ph.D. Candidate at KAIST"
   location         : "Seoul, Korea"
   email            :
